--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 02:24:00 PM</p>
+    <p class="lastupdate">09/17/2020 02:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">89.3&#176;F</td>
+        <td class="data">89.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">89.3&#176;F</td>
+        <td class="data">89.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">89.3&#176;F</td>
+        <td class="data">89.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">51.9&#176;F</td>
+        <td class="data">53.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">28%</td>
+        <td class="data">30%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.886 inHg (-0.069)</td>
+        <td class="data">29.886 inHg (-0.068)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph S (180&#176;)</td>
+        <td class="data">5 mph SW (225&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:05:51 PM">
-            89.3</span><br/>
+          <span title="02:26:51 PM">
+            89.5</span><br/>
           <span title="06:56:13 AM">
             50.8</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:05:51 PM" class="hival">
-            89.3</span>
+          <span title="02:26:51 PM" class="hival">
+            89.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          72
+          81
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">90%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 23 hours, 37 minutes</td>
+      <td class="data">15 days, 23 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 23 hours, 37 minutes</td>
+      <td class="data">15 days, 23 hours, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
