--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 02:29:00 PM</p>
+    <p class="lastupdate">09/17/2020 02:34:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">89.5&#176;F</td>
+        <td class="data">89.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">89.5&#176;F</td>
+        <td class="data">89.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">89.5&#176;F</td>
+        <td class="data">89.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.9&#176;F</td>
+        <td class="data">53.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.886 inHg (-0.068)</td>
+        <td class="data">29.888 inHg (-0.062)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph SW (225&#176;)</td>
+        <td class="data">8 mph S (180&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="02:09:33 PM">
-            9</span><br/>
-          200
+          <span title="02:33:27 PM">
+            11</span><br/>
+          186
         </td>
         <td class="data new_row hilo_week">
           <span title="04:43:42 PM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          81
+          97
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 23 hours, 42 minutes</td>
+      <td class="data">15 days, 23 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 23 hours, 42 minutes</td>
+      <td class="data">15 days, 23 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
