--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 03:14:00 PM</p>
+    <p class="lastupdate">09/17/2020 03:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.6&#176;F</td>
+        <td class="data">87.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.6&#176;F</td>
+        <td class="data">87.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.6&#176;F</td>
+        <td class="data">87.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.2&#176;F</td>
+        <td class="data">53.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.869 inHg (-0.068)</td>
+        <td class="data">29.868 inHg (-0.068)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">6 mph S (180&#176;)</td>
+        <td class="data">5 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.2&#176;F</td>
+        <td class="data">77.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="10:37:01 AM">
             29.970</span><br/>
-          <span title="03:13:01 PM">
-            29.869</span>
+          <span title="03:18:01 PM">
+            29.868</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          167
+          170
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:11:01 PM">
-            77.2</span><br/>
+          <span title="03:18:01 PM">
+            77.3</span><br/>
           <span title="05:43:00 AM">
             70.6</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 0 hours, 27 minutes</td>
+      <td class="data">16 days, 0 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 0 hours, 27 minutes</td>
+      <td class="data">16 days, 0 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
