--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 04:04:00 PM</p>
+    <p class="lastupdate">09/17/2020 04:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">86.7&#176;F</td>
+        <td class="data">86.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">86.7&#176;F</td>
+        <td class="data">86.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">86.7&#176;F</td>
+        <td class="data">86.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">49.7&#176;F</td>
+        <td class="data">50.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">28%</td>
+        <td class="data">29%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.866 inHg (-0.043)</td>
+        <td class="data">29.865 inHg (-0.045)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">9 mph S (180&#176;)</td>
+        <td class="data">9 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">77.5&#176;F</td>
+        <td class="data">77.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="10:37:01 AM">
             29.970</span><br/>
-          <span title="03:58:01 PM">
-            29.866</span>
+          <span title="04:08:01 PM">
+            29.865</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          0<br/>
-          176
+          1<br/>
+          177
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">16 days, 1 hour, 17 minutes</td>
+      <td class="data">16 days, 1 hour, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">16 days, 1 hour, 17 minutes</td>
+      <td class="data">16 days, 1 hour, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
